--- a/templates/listPlayers/index.html
+++ b/templates/listPlayers/index.html
@@ -1,19 +1,15 @@
-<!doctype html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>LIsta de Jogadores</title>
-    <script src="/templates/listPlayers/index.js"></script>
-</head>
-<body>
-    Jogadores:
+<h1>Jogadores:</h1>
 
-    <table>
-        <!--Teste-->
-    </table>
-    <button onclick="redirectPHP()">PHP</button>
-</body>
-</html>
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>Nome</th>
+        <th>email</th>
+        <th>data_cadastro</th>
+    </tr>
+    </thead>
+    <tbody>
+    <!--CONTENT-->
+    </tbody>
+</table>
