--- a/templates/listPlayers/index.html
+++ b/templates/listPlayers/index.html
@@ -5,11 +5,13 @@
     <tr>
         <th>Id</th>
         <th>Nome</th>
-        <th>email</th>
-        <th>data_cadastro</th>
+        <th>Email</th>
+        <th>Data do Cadastro</th>
+        <th>Alterar</th>
+        <th>Excluir</th>
     </tr>
     </thead>
     <tbody>
-    <!--CONTENT-->
+    <!--TABLE CONTENT-->
     </tbody>
 </table>
