--- a/templates/deletePlayer/error.html
+++ b/templates/deletePlayer/error.html
@@ -1,4 +1,4 @@
 <h3>
-    Ocorreu um erro ao excluir o jogador.
+    Jogador não existe.
 </h3>
 <a type="button" href="/backend/routes/listPlayers.php">Ir para a listagem</a>
