Alter Player - start

--- a/templates/deletePlayer/index.html
+++ b/templates/deletePlayer/index.html
@@ -1,5 +1,5 @@
 <script src="/templates/deletePlayer/index.js"></script>
-<form id="formExcluir">
+<form id="formExclude">
     <input id="id" name="id" placeholder="id" value="<--id-->" disabled/>
     <input id="nome" name="nome" placeholder="nome" value="<--nome-->" disabled/>
     <input id="email" name="email" placeholder="email" value="<--email-->" disabled/>
