--- a/templates/listPlayers/styles.css
+++ b/templates/listPlayers/styles.css
@@ -1,6 +1,6 @@
 body{
     background-color: #000000;
-    color: brown;
+    color: white;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
