--- a/dataMapper/templates/navbar.html
+++ b/dataMapper/templates/navbar.html
@@ -1,5 +1,6 @@
 <nav>
     <ul>
+        <li><a href="/index.php">Início</a></li>
         <li><a href="/dataMapper/backend/routes/listPlayers.php">Lista de jogadores</a></li>
         <li><a href="/dataMapper/backend/routes/newPlayer.php">Cadastrar novo jogador</a></li>
     </ul>
